src/test/ui/range/range-1.stderr
error[E0308]: mismatched types
  --> $DIR/range-1.rs:5:19
   |
LL |     let _ = 0u32..10i32;
   |                   ^^^^^ expected `u32`, found `i32`

error[E0277]: the trait bound `bool: Step` is not satisfied
  --> $DIR/range-1.rs:9:14
   |
LL |     for i in false..true {}
   |              ^^^^^^^^^^^ the trait `Step` is not implemented for `bool`
   |
   = note: required because of the requirements on the impl of `Iterator` for `std::ops::Range<bool>`
   = note: required because of the requirements on the impl of `IntoIterator` for `std::ops::Range<bool>`

error[E0277]: the size for values of type `[{integer}]` cannot be known at compilation time
  --> $DIR/range-1.rs:14:17
   |
LL |     let range = *arr..;
   |                 ^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[{integer}]`
note: type parameters have an implicit `Sized` obligation
  --> $SRC_DIR/core/src/ops/range.rs:LL:COL
   |
LL | pub struct RangeFrom<Idx> {
   |                      ^^^ required by this bound in `RangeFrom`

error[E0277]: the size for values of type `[{integer}]` cannot be known at compilation time
  --> $DIR/range-1.rs:14:9
   |
LL |     let range = *arr..;
   |         ^^^^^ doesn't have a size known at compile-time
   |
   = help: within `RangeFrom<[{integer}]>`, the trait `Sized` is not implemented for `[{integer}]`
   = note: required because it appears within the type `RangeFrom<[{integer}]>`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
